implemented new drop system alongside moving guardian mode to adapt this; introduced linking tables for guardians to maps, skill to guardians for guardian mode guard management